// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge component renders 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-QWATl {
    justify-content: center;
    align-items: center;
    border-radius: var(--radii-0);
    border: 1px solid #FFFFFF;
    font-family: var(--fonts-body);
  }
}

@media  {
  .c-QWATl-eUcpXf-theme-info {
    background: var(--colors-primaryLight);
    color: var(--colors-primaryMid);
  }

  .c-QWATl-kUPbCM-size-sm {
    font-size: var(--fontSizes-md);
    padding-left: var(--space-4);
    padding-right: var(--space-4);
    min-height: 32px;
  }
}

@media  {
  .c-PJLV-ieRHsFj-css {
    white-space: nowrap;
    overflow-x: hidden;
    text-overflow: ellipsis;
  }
}

<div>
  <div
    class="c-dhzjXW c-QWATl c-QWATl-eUcpXf-theme-info c-QWATl-kUPbCM-size-sm"
    role="status"
  >
    <div
      class="c-PJLV c-PJLV-ieRHsFj-css"
    >
      Some Text
    </div>
  </div>
</div>
`;

exports[`Badge component renders a md size and danger theme 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-QWATl {
    justify-content: center;
    align-items: center;
    border-radius: var(--radii-0);
    border: 1px solid #FFFFFF;
    font-family: var(--fonts-body);
  }
}

@media  {
  .c-QWATl-eUcpXf-theme-info {
    background: var(--colors-primaryLight);
    color: var(--colors-primaryMid);
  }

  .c-QWATl-kUPbCM-size-sm {
    font-size: var(--fontSizes-md);
    padding-left: var(--space-4);
    padding-right: var(--space-4);
    min-height: 32px;
  }

  .c-QWATl-jtgfr-theme-danger {
    background: var(--colors-dangerLight);
    color: var(--colors-dangerDark);
  }

  .c-QWATl-kemnMd-size-md {
    font-size: var(--fontSizes-md);
    padding-left: var(--space-4);
    padding-right: var(--space-4);
    min-height: 48px;
  }
}

@media  {
  .c-PJLV-ieRHsFj-css {
    white-space: nowrap;
    overflow-x: hidden;
    text-overflow: ellipsis;
  }
}

<div>
  <div
    class="c-dhzjXW c-QWATl c-QWATl-jtgfr-theme-danger c-QWATl-kemnMd-size-md"
    role="status"
  >
    <div
      class="c-PJLV c-PJLV-ieRHsFj-css"
    >
      Some Text
    </div>
  </div>
</div>
`;
